
 - Based on version 6.5 of Boehm-Weiser garbage collector, which fixes some
   problems related to the OSX port.

 - The latest version of Mingw32's GCC is broken. It silently ignores pathnames
   which end in '/'.  The include options in ECL have been modified to take
   this into account but this intrinsic bug of Mingw might influence ECL's
   behavior in some other unexpected ways.

* Foreign function interface (FFI):

 - Added nickname UFFI for FFI package; functions ALLOCATE-FOREIGN-STRING,
   WITH-FOREIGN-STRING, WITH-FOREIGN-STRINGS, and FOREIGN-STRING-LENGTH are now
   exported. (M. Pasternacki)

 - Ecl now accepts :CSTRING UFFI primitive type. (M. Pasternacki)

 - DEF-FOREIGN-VAR rewritten to make variables visible from other files and to
   dereference also arrays and pointers. (M. Pasternacki)

 - When creating a C-STRING, characters after the fill pointer are discarded,
   according to people's expectations.

* Compiler changes:

 - Generated C functions now have readable names corresponding to appropriate
   Lisp function names (M. Pasternacki)

 - ECL now compiles with the free Microsoft Visual C++ Toolkit
   2003. Instructions are provided on how to do it.

 - Unless SI:*KEEP-DOCUMENTATION* = NIL, the documentation of functions is
   stored in the compiled files.

 - COMPILE-FILE now honors the value of :OUTPUT-FILE given by the user, even if
   they do no have the usual extension (.fas). Furthermore, LOAD will now try
   to load files with strange extensions (.fas, .fasl, etc) as binary files and
   only if this fails, use the source-file loader.

 - .LSP/.LISP are now recognized lisp source extensions.

* Errors fixed:

 - Now .o files compiled with :SYSTEM-P T with dash in filename load
   correctly. (M. Pasternacki)

 - Incorrectly loaded files are now unloaded without falling into infinite
   loop.  (M. Pasternacki)

 - When ECASE or CTYPECASE signal a TYPE-EROR the TYPE-ERROR-DATUM is the value
   that originated the error.
